app/assets/stylesheets/external_main.css
/* ... */
.banner-tab .nav-tabs a:hover, .banner-tab .tabs a:hover {
    text-decoration: none;
    color:darkblue;
}
.banner-tab .nav-tabs .active a, .banner-tab .tabs .active a {

    text-decoration: none;
}
.banner-tab .tab-content, .banner-tab .content {
    margin-top: -6px;
    padding: 20px;
}
.banner-tab .tab-pane {
    display: none;
}
.banner-tab .tab-pane.active {
    display: block;
}
.banner-tab .search-input {
    height: 67px;
    padding-left: 60px;
    border-radius: 100px;
}

#header-bar{
    background:#333333;padding:10px;
}

#header-bar h2{
    color:white;
    display: inline;
}


div#manufacturer-search, #product-search{
    position: relative;
    float:right;
    margin-top:6px;
    width:40%
}

@media(max-width:640px) {
    div#manufacturer-search , #product-search{
        position: relative;
        float:none;
        width:95%
    }
    #header-bar {
        padding-bottom: 14px;
    }
    #header-bar .row {
        text-align: center;
    }

    #product-search input {
        height: 40px;
        padding-left: 50px;
        border-radius: 100px;
        font-size: 1em;
        margin-bottom: 0px;
    }

    #product-search .form-icon{
        left:10px;
        top:8px;
    }

    #product-search .btn{
        position: absolute;
        top: 0;
        right: 0;
        border-radius: 0 30px 30px 0px;border: 0;
        display: inline-block;
        padding-top: 8px;
        padding-bottom: 9px;
        padding-left: 35px;
        padding-right: 35px;
        background-color: #0e78b8;
        font-weight: bold;
        font-size: 18px;
        color: #fff;
        cursor: pointer;
        outline: none;
        -webkit-transition: all .2s linear;
        -o-transition: all .2s linear;
        transition: all .2s linear;
        margin-bottom: 0px;
    }
}

div#manufacturer-search input , #product-search input {
    height: 40px;
    padding-left: 40px;
    border-radius: 100px;
    font-size: 1em;
    margin-bottom: 0px;
}

div#manufacturer-search .form-icon, #product-search .form-icon{
    left:10px;
    top:8px;
}

div#manufacturer-search .btn, #product-search .btn{
    position: absolute;
    top: 0;
    right: 0;
    border-radius: 0 30px 30px 0px;border: 0;
    display: inline-block;
    padding-top: 8px;
    padding-bottom: 9px;
    padding-left: 35px;
    padding-right: 35px;
    background-color: #0e78b8;
    font-weight: bold;
    font-size: 18px;
    color: #fff;
    cursor: pointer;
    outline: none;
    -webkit-transition: all .2s linear;
    -o-transition: all .2s linear;
    transition: all .2s linear;
    margin-bottom: 0px;
}

.breadcrumbs {

}
.breadcrumbs li {
    font-size: 12px;
    color:#666;
}

.breadcrumbs li:before {
    content: "\f105";
}

.breadcrumbs li:before{
    margin-right: 0.5em;
    font-size: 14px;
    font-family: FontAwesome;
}

.breadcrumbs a {
    font-weight: bold;
    font-size: 15px;
    color: #20698a;
    text-decoration: none!important;
}
.breadcrumbs a:hover {
    text-decoration: underline!important;
}
.breadcrumbs span {
    font-weight: bold;
    font-size: 15px;
    color: #20698a;
}
.form-control {
    width: 100%;
    padding: 20px;
    -webkit-box-shadow: none;
    box-shadow: none;
    border: 0;
}
.form-control:focus {
    outline: none;
}
input.form-control {
    height: 65px;
}
.form-group {
    margin-bottom: 25px;
}
.form-group-sm {
    margin-bottom: 19px;
}
.form-control-pretty {
    background-color: #f6f6f6!important;
    border: 2px solid #f6f6f6!important;
    box-shadow: none!important;
    padding: 20px!important;
    -webkit-transition: all .4s linear;
    -o-transition: all .4s linear;
    transition: all .4s linear;
}
.form-control-pretty:focus {
    outline: none!important;
    border-color: #27b7e5!important;
}
textarea.form-control {
    height: 246px;
}
.form-inline .form-group {
    position: relative;
    margin-bottom: 0;
}
.form-inline .btn {
    position: absolute;
    top: 0;
    right: 0;
    border-radius: 0 30px 30px 0px;
}
.form-inline .form-control {
    padding-left: 64px!important;
}
.form-icon {
    position: absolute;
    left: 20px;
    top: 20px;
}
.form-icon .icon {
    color: #a3a3a3;
    font-size: 24px;
}
.form-search {
    max-width: 526px;
    width: 90%;
    margin: 0 auto;
}
.form-search input {
    margin-bottom: 0;
}
.form-contact-mail {
    margin-top: 100px;
    margin-bottom: 50px;
}
.form-action .btn {
    padding-top: 20px;
    padding-bottom: 19px;
    width: 100%}
.form-request-quote {
    padding-right: 40px;
    padding-bottom: 20px;
}
.form-request-quote .form-label {
    display: block;
    margin-top: 15px;
}
.form-request-quote input.form-control {
    height: 58px;
}
.select-sm {
    width: 120px;
}
.text-placeholder {
    margin-bottom: 3px;
    padding-top: 14px;
    padding-bottom: 14px;
}
.form-optional {
    display: block;
    padding-top: 15px;
    padding-bottom: 15px;
    font-size: 18px;
    font-weight: bold;
    line-height: 1.4;
}
.form-optional:hover {
    color: #79d3fa;
}
.form-optional .icon {
    float: left;
    font-size: 28px;
    margin-right: 18px;
}
.btn {
    border: 0;
    display: inline-block;
    padding-top: 22px;
    padding-bottom: 22px;
    padding-left: 35px;
    padding-right: 35px;
    background-color: #0e78b8;
    font-weight: bold;
    font-size: 20px;
    color: #fff;
    cursor: pointer;
    text-transform: uppercase;
    outline: none;
    -webkit-transition: all .2s linear;
    -o-transition: all .2s linear;
    transition: all .2s linear;
}
.btn:hover {
    text-decoration: none;
    background-color: #27b7e5;
    color: #fff;
}
.btn-blue {
    background-color: #0e78b8;
    font-size: 19px;
}
.btn-blue:hover {
    background-color: #27b7e5;
}
.btn-sm {
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 25px;
    padding-right: 25px;
    font-size: 18px;
    color:white;
    font-weight: bold;
    text-transform: uppercase;
    display: inline-block;
    background-color: #26A65B;
}
/* ... */

